test_regress/t/t_property_unsup.out
%Error-UNSUPPORTED: t/t_property_unsup.v:65:41: Unsupported: eventually[] (in property expression)
   65 |   assert property (counter == 1 implies eventually[1: 2] counter == 3);
      |                                         ^~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_unsup.v:80:20: Unsupported: eventually[] (in property expression)
   80 |   assert property (eventually[0: 2] counter == 3);
      |                    ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:90:21: Unsupported: eventually[] (in property expression)
   90 |   assert property ((eventually[0: 1] a) implies (eventually[0: 1] a));
      |                     ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:90:50: Unsupported: eventually[] (in property expression)
   90 |   assert property ((eventually[0: 1] a) implies (eventually[0: 1] a));
      |                                                  ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:92:21: Unsupported: s_eventually (in property expression)
   92 |   assert property ((s_eventually a) implies (s_eventually a));
      |                     ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:92:46: Unsupported: s_eventually (in property expression)
   92 |   assert property ((s_eventually a) implies (s_eventually a));
      |                                              ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:112:21: Unsupported: eventually[] (in property expression)
  112 |   assert property ((eventually[0: 1] a) iff (eventually[0: 1] a));
      |                     ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:112:46: Unsupported: eventually[] (in property expression)
  112 |   assert property ((eventually[0: 1] a) iff (eventually[0: 1] a));
      |                                              ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:114:21: Unsupported: s_eventually (in property expression)
  114 |   assert property ((s_eventually a) iff (s_eventually a));
      |                     ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:114:42: Unsupported: s_eventually (in property expression)
  114 |   assert property ((s_eventually a) iff (s_eventually a));
      |                                          ^~~~~~~~~~~~
%Error: Exiting due to
